# vocabulary-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_sm2.py
docs/: architecture.md  deployment.md  learning-algorithm.md
functions/api/: [[path]].js
mcp-server/: database.py  oauth_provider.py  oauth_templates.py  pyproject.toml  server.py
mcp-server/tests/: __init__.py  conftest.py  test_database.py  test_oauth_provider.py  test_server.py  test_server_integration.py
pwa/: app.js  index.html  manifest.json  style.css  sw.js
